src/objects/Harmonized_Tariff_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>ADCVD_Case_Number_Text__c</fullName>
        <label>ADCVD Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case_Type_Text__c</fullName>
        <label>ADCVD Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case_Type__c</fullName>
        <formula>TEXT(ADCVD_Case__r.ADCVD_Case_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADCVD Case Type Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADCVD Case</label>
        <referenceTo>ADCVD_Case__c</referenceTo>
        <relationshipLabel>Harmonized Tariff Schedules</relationshipLabel>
        <relationshipName>Harmonized_Tariff_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADCVD_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADCVD Order</label>
        <referenceTo>ADCVD_Order__c</referenceTo>
        <relationshipLabel>Harmonized Tariff Schedules</relationshipLabel>
        <relationshipName>Harmonized_Tariff_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBP_Case_Number_Text__c</fullName>
        <label>CBP Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Concat_Text_Values__c</fullName>
        <label>Case Concat Text Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commodity_Text__c</fullName>
        <label>Commodity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <formula>TEXT(ADCVD_Case__r.Commodity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commodity Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Text__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(ADCVD_Case__r.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTS_Number_Formatted__c</fullName>
        <formula>CASE( LEN( HTS_Number__c ) ,
 4, HTS_Number__c ,
 6, LEFT(HTS_Number__c, 4) + &apos;.&apos; + RIGHT(HTS_Number__c, 2) ,
 8, LEFT(HTS_Number__c, 4) + &apos;.&apos; + MID(HTS_Number__c, 5, 2) + &apos;.&apos; + RIGHT(HTS_Number__c, 2) ,
 10, LEFT(HTS_Number__c, 4) + &apos;.&apos; + MID(HTS_Number__c, 5, 2) + &apos;.&apos; + MID(HTS_Number__c, 7, 2) + &apos;.&apos; + RIGHT(HTS_Number__c, 2) ,
 HTS_Number__c )</formula>
        <label>HTS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTS_Number_Length__c</fullName>
        <formula>LEN( HTS_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HTS Number Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HTS_Number__c</fullName>
        <description>Harmonized Tariff Schedule</description>
        <externalId>true</externalId>
        <label>HTS Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTS_Type__c</fullName>
        <label>HTS Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name_Text_Value__c</fullName>
        <label>Product Short Name Text Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name_Text__c</fullName>
        <label>Product Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name__c</fullName>
        <formula>ADCVD_Case__r.Product_Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Short Name Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Text_Value__c</fullName>
        <label>Product Text Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Text__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>ADCVD_Case__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspension_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suspension Agreement</label>
        <referenceTo>Suspension_Agreement__c</referenceTo>
        <relationshipLabel>Harmonized Tariff Schedules</relationshipLabel>
        <relationshipName>Harmonized_Tariff_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Harmonized Tariff Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>HarmonizedTariffSchedule_ClosedLckdQueue_Harmonized_Tariff_Schedule</fullName>
        <filterScope>Queue</filterScope>
        <label>HarmonizedTariffSchedule ClosedLckdQueue</label>
        <queue>HarmonizedTariffSchedule_ClosedLckdQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Harmonized_Tariff_Schedule_Open_Queue_Harmonized_Tariff_Schedule</fullName>
        <filterScope>Queue</filterScope>
        <label>Harmonized Tariff Schedule Open Queue</label>
        <queue>Harmonized_Tariff_Schedule_Open_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Harmonized Tariff Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harmonized Tariff Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>A0901OnlyAdminReparentsHTS</fullName>
        <active>true</active>
        <description>Harmonized Tariff Schedule records can only be reparented by a System Administrator.</description>
        <errorConditionFormula>AND(
            $Setup.Master_Automation__c.ValidationRulesEnabled__c == true,
            Locked__c == false,
            NOT( ISNEW() ),
            OR(
            ISCHANGED(ADCVD_Case__c),
            ISCHANGED(ADCVD_Order__c),
            ISCHANGED(Suspension_Agreement__c)
            ),
            NOT(
            $Permission.ADCVD_App_Modify_Parents
            )
            )</errorConditionFormula>
        <errorMessage>You are not authorized to edit ADCVD Case, ADCVD Order, or Suspension Agreement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_Locked_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Permission.Edit_ADCVD_Locked_Records == false, 
NOT(ISNEW()), 
PRIORVALUE(Locked__c) == true 
)</errorConditionFormula>
        <errorMessage>This record is locked.  Please contact your administrator about unlocking this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Admin_reparents_HTS_records</fullName>
        <active>true</active>
        <description>HTS records can only be reparented by a System Administrator.</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, 
Locked__c == false, 
NOT( ISNEW() ), 
OR(ISCHANGED(ADCVD_Order__c ),ISCHANGED(Suspension_Agreement__c)),$Profile.Name 
&lt;&gt; 
&quot;System Administrator&quot; 
)</errorConditionFormula>
        <errorMessage>You are not authorized to edit this field. Only a System Administrator can edit the parent ADCVD Order or Suspension Agreement for this record.</errorMessage>
    </validationRules>
</CustomObject>